<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_search">Поиск</string>
    <string name="title_mediateca">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="edit_inf">Редактировать информацию</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="link_to_yandexPracticum">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_address">g.zagovenko@rozac.ru</string>
    <string name="subject_1">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="subject_2">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agriment">https://yandex.ru/legal/practicum_offer/</string>
    <string name="input_hint">Поиск</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="collectionName">Альбом</string>
    <string name="releaseDate">Год</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
    <string name="startTime">00:00</string>
    <string name="key_for_switch">key_for_switch</string>
    <string name="check_connection">Проверьте подключение к интеренету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="Mediateca">Медиатека</string>
    <string name="Selected_tracks">Избранные треки</string>
    <string name="Playlist">Плейлисты</string>
    <string name="Nothing_create">Вы не создали\n ни одного плейлиста</string>
    <string name="Mediateca_is_empty">Ваша медиатека пуста</string>
    <string name="tracks"> треков</string>
    <string name="track"> трек</string>
    <string name="tracka"> трека</string>
    <string name="zero_tracks">0 треков</string>
    <string name="Add_to_Playlist">Добавлено в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="Description">Описание</string>
    <string name="name">Название*</string>
    <string name="playList">Плэйлист</string>
    <string name="created">создан</string>
    <string name="track_already">Трек уже добавлен в плейлист</string>
    <string name="playlist_is_empty">Плейлист пуст</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="you_want_delete_track">Хотите удалить трек?</string>
    <string name="you_want_delete_playlist">Хотите удалить плейлист</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>

</resources>