<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".MediatecaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent = "0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        style="@style/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent = "0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ImageBorder"
        style="@style/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/PlayBorder"
        style="@style/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/InfBorder"
        style="@style/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent = "0.99" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="spread"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toTopOf="@id/trackImage"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder_mediateca"
        app:layout_constraintBottom_toTopOf="@+id/ImageBorder"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTag="imageTag"
        app:layout_constraintTop_toBottomOf="@+id/left_arrow"
        app:layout_constraintVertical_bias="0.705" />

    <TextView
        android:id="@+id/nameTrack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?attr/text_color_artistTrack"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/nameArtist"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@id/ImageBorder"
        tools:text="Yesterday(Remastered 2009)" />

    <TextView
        android:id="@+id/nameArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/text_color_artistTrack"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/nameTrack"
        tools:text="The Beatles" />

    <ImageView
        android:id="@+id/addPlayList"
        style="@style/amediateca_button"
        android:src="@drawable/ic_addplaylist"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintRight_toLeftOf="@id/play"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="@+id/play" />


    <ImageView
        android:id="@+id/play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@+id/timer"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/addPlayList"
        app:layout_constraintTop_toBottomOf="@+id/nameArtist"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintWidth_percent="0.22" />

    <ImageView
        android:id="@+id/like"
        style="@style/amediateca_button"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintRight_toLeftOf="@id/play"
        app:layout_constraintLeft_toRightOf="@id/play"
        app:layout_constraintTop_toTopOf="@+id/play" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/startTime"

        android:textColor="?attr/text_color_artistTrack"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/PlayBorder"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTag="text2Tag"
        app:layout_constraintTop_toBottomOf="@id/play" />

    <TextView
        android:id="@+id/time"
        style="@style/trackInfAtribut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toBottomOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album"
        style="@style/trackInfAtribut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?attr/text_color_artistTrack"
        android:textDirection="rtl"
        app:layout_constraintBottom_toBottomOf="@+id/collectionName"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/collectionName"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year"
        style="@style/trackInfAtribut"
        android:maxLength="4"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toBottomOf="@+id/realiseDate"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="1955" />

    <TextView
        android:id="@+id/genre"
        style="@style/trackInfAtribut"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toBottomOf="@+id/primaryGemreName"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="Rock" />

    <TextView
        android:id="@+id/countryInf"
        style="@style/trackInfAtribut"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toBottomOf="@id/country"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="Великобритания" />

    <TextView
        android:id="@+id/duration"
        style="@style/trackInfAtribut"
        android:text="@string/Duration"
        app:layout_constraintBottom_toTopOf="@+id/collectionName"
        app:layout_constraintTop_toBottomOf="@id/PlayBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintTag="text2Tag" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/trackInfAtribut"
        android:text="@string/collectionName"
        app:layout_constraintEnd_toStartOf="@+id/album"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintBottom_toTopOf="@id/realiseDate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/duration" />

    <TextView
        android:id="@+id/realiseDate"
        style="@style/trackInfAtribut"
        android:text="@string/releaseDate"
        app:layout_constraintTop_toBottomOf="@id/collectionName"
        app:layout_constraintBottom_toTopOf="@id/primaryGemreName"
        app:layout_constraintStart_toStartOf="@+id/collectionName" />

    <TextView
        android:id="@+id/primaryGemreName"
        style="@style/trackInfAtribut"
        android:text="@string/primaryGenreName"
        app:layout_constraintTop_toBottomOf="@+id/realiseDate"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintStart_toStartOf="@+id/realiseDate" />

    <TextView
        android:id="@+id/country"
        style="@style/trackInfAtribut"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="@id/InfBorder"
        app:layout_constraintTop_toBottomOf="@id/primaryGemreName"
        app:layout_constraintStart_toStartOf="@+id/primaryGemreName" />


</androidx.constraintlayout.widget.ConstraintLayout>