<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".MediatecaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/trackImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder_mediateca"
        app:layout_constraintBottom_toTopOf="@+id/nameTrack"
        app:layout_constraintDimensionRatio="h, 1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toEndOf="@id/leftBorder"

        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/nameTrack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?attr/text_color_artistTrack"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/nameArtist"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameArtist"
        tools:text="Yesterday(Remastered 2009)" />

    <TextView
        android:id="@+id/nameArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/text_color_artistTrack"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"

        tools:text="The Beatles" />

    <ImageView
        android:id="@+id/addPlayList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:backgroundTint="@color/Dark_grey"

        android:src="@drawable/ic_addplaylist"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintHeight_percent="0.133"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintWidth_percent="0.133" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/like"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toEndOf="@+id/addPlayList"

        app:layout_constraintWidth_percent="0.22" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="29dp"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"

        app:layout_constraintHeight_percent="0.133"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintWidth_percent="0.133" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/text_color_artistTrack"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="@+id/play"
        app:layout_constraintStart_toStartOf="@+id/play"
        app:layout_constraintTag="text2Tag"

        tools:text="0:30" />


    <TextView
        android:id="@+id/time"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toTopOf="@+id/album"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="5:35" />

    <TextView
        android:id="@+id/album"
        style="@style/trackInfAtribut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textDirection="rtl"

        android:maxLines="1"
        android:singleLine="true"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toBottomOf="@+id/collectionName"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/collectionName"
        app:layout_constraintHorizontal_weight="3"

        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/year"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toTopOf="@+id/genre"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="1955"
        android:maxLength="4"/>

    <TextView
        android:id="@+id/genre"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toTopOf="@+id/countryInf"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="Rock" />

    <TextView
        android:id="@+id/countryInf"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:textColor="?attr/text_color_artistTrack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        tools:text="Великобритания" />

    <TextView
        android:id="@+id/duration"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/Duration"
        app:layout_constraintBottom_toTopOf="@+id/collectionName"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTag="text2Tag" />

    <TextView
        android:id="@+id/collectionName"
        style="@style/trackInfAtribut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/collectionName"
        app:layout_constraintEnd_toStartOf="@+id/album"
        app:layout_constraintHorizontal_weight="1"

        app:layout_constraintBottom_toTopOf="@+id/realiseDate"
        app:layout_constraintStart_toStartOf="@+id/leftBorder" />

    <TextView
        android:id="@+id/realiseDate"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/releaseDate"
        app:layout_constraintBottom_toTopOf="@+id/primaryGemreName"
        app:layout_constraintStart_toStartOf="@+id/leftBorder" />

    <TextView
        android:id="@+id/primaryGemreName"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/primaryGenreName"
        app:layout_constraintBottom_toTopOf="@+id/country"
        app:layout_constraintStart_toStartOf="@+id/leftBorder" />

    <TextView
        android:id="@+id/country"
        style="@style/trackInfAtribut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="17dp"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/leftBorder" />


</androidx.constraintlayout.widget.ConstraintLayout>